--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,80 @@ body {
 
 ul {
   list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+img {
+  display: block;
+  margin: 0;
+  max-width: 100%;
 }
 
 a {
   text-decoration: none;
 }
 
+section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  gap: 76px;
+}
+
+.header-list {
+  display: flex;
+  gap: 40px;
+  padding: 24px 0 24px 0;
+}
+
 address {
   font-style: normal;
 }
 
+.adrdess-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
 address a {
   color: #434455;
+}
+
+.main-info {
+  background-color: #2e2f42;
+  padding: 188px 0;
 }
 
 .main-titel {
@@ -31,6 +93,8 @@ address a {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
+  max-width: 496px;
+  margin: 0 auto 48px auto;
 }
 
 .two-title {
@@ -41,6 +105,7 @@ address a {
   text-align: center;
   text-transform: capitalize;
   letter-spacing: 0.02em;
+  margin-bottom: 72px;
 }
 
 .title-three {
@@ -49,6 +114,7 @@ address a {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .logo {
@@ -71,10 +137,6 @@ address a {
   font-size: 16px;
 }
 
-.main-info {
-  background-color: #2e2f42;
-}
-
 .button-main {
   color: #ffffff;
   background-color: #4d5ae5;
@@ -83,6 +145,11 @@ address a {
   cursor: pointer;
   font-weight: 500;
   line-height: 1.5;
+  margin: 0 auto;
+  display: block;
+  border-radius: 4px;
+  padding: 16px 32px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .button-main:hover,
@@ -93,6 +160,7 @@ address a {
 .footer {
   background: #2e2f42;
   color: #f4f4fd;
+  padding: 100px 0;
 }
 
 .footer-logo {
@@ -103,6 +171,8 @@ address a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-bottom: 16px;
+  display: inline-block;
 }
 
 .footer-logo span {
@@ -123,6 +193,52 @@ address a {
   background-color: #f4f4fd;
 }
 
-.team-item {
-  background-color: #fff;
+.advantages-list {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.advantages-iteam {
+  width: calc((100% - 72px) / 4);
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
+.team-container {
+  background-color: #ffffff;
+  padding: 32px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.team-iteam {
+  width: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.portfolio-item {
+  width: calc((100% - 72px) / 3);
+}
+
+.sub-container-portfolio {
+  padding: 32px 0 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.footer-text {
+  width: 264px;
 }
