--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ address a {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .sub-container-portfolio {
