--- a/css/style.css
+++ b/css/style.css
@@ -236,11 +236,14 @@ address a {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  border-radius: 0px 0px 4px 4px;
 }
 
-.team-iteam {
+.team-item {
   border-radius: 0px 0px 4px 4px;
   width: calc((100% - 72px) / 4);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-list {
@@ -252,7 +255,6 @@ address a {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  border-radius: 0px 0px 4px 4px;
 }
 
 .sub-container-portfolio {
